grammar classification